feat(all modules)：新增用户管理、角色管理、组织机构管理、群组管理、项目管理和项目文件浏览

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "app_name": "Seaman",
+  "app_scope": "",
+  "tenant_id": "",
   "port": "80",
   "static_path": "/manage/static",
   "data_base": {
