fest(service,controller)：add function for Insert project file

--- a/config.json
+++ b/config.json
@@ -12,5 +12,9 @@
     "pwd": "123456",
     "database": "seaman"
   },
+  "session": {
+    "currentUserName": "username",
+    "currentUserId": "userId"
+  },
   "mode": "dev"
 }
